--- a/style.css
+++ b/style.css
@@ -92,8 +92,9 @@
         .hostingTitle
         {
             color: #3D86C9;
-            padding-top: 1%;
-            padding-bottom: 1%;
+            margin: 0;
+            display: flex;
+            justify-content: space-between;
             
         }
             .hostingSubtile, .hostingParagraph
@@ -117,9 +118,10 @@
             border-radius: 1.5rem;
             margin-top: 1% ;
             padding: 2rem;
-            flex-direction: column;
+            flex-direction: row;
+            justify-content: space-between;
             display: flex;
-            width: 15%;
+            width: 50%;
             
             
         }
@@ -171,9 +173,9 @@
             margin-top: 1% ;
             padding: 2rem;
             width: 50%; 
-            display: flex;
             flex-direction: row;
             flex-wrap: wrap;  
+            justify-content: space-between;
              
                 
         }    
@@ -184,6 +186,7 @@
                 grid-row-start: 2;
                 margin: 1rem;
                 width: 25%;
+                
                 
                 
             }
