--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@
     .hosting
     {
         display: flex;
+        
     }
         .hostingTitle
         {
@@ -95,6 +96,7 @@
             margin: 0;
             display: flex;
             justify-content: space-between;
+            
             
         }
             .hostingSubtile, .hostingParagraph
@@ -116,12 +118,14 @@
         {
             background : #f3f3f3;
             border-radius: 1.5rem;
-            margin-top: 1% ;
+            margin : 10% ;
             padding: 2rem;
             flex-direction: row;
-            justify-content: space-between;
-            display: flex;
-            width: 50%;
+            justify-content: center;
+            display: grid;
+            column-gap: 2rem;
+            row-gap: 2rem;
+            width: auto;
             
             
         }
@@ -172,10 +176,12 @@
             border-radius: 1.5rem;
             margin-top: 1% ;
             padding: 2rem;
-            width: 50%; 
             flex-direction: row;
-            flex-wrap: wrap;  
             justify-content: space-between;
+            width: 50%;
+            display: grid;
+            column-gap: 2rem;
+            row-gap: 2rem;
              
                 
         }    
@@ -185,7 +191,7 @@
                 border-radius: 1rem;
                 grid-row-start: 2;
                 margin: 1rem;
-                width: 25%;
+                width: 80%;
                 
                 
                 
