--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
  *{
-    width: 100%;
+    height: auto;
+    width: auto;
  }
+    @font-face {
+        font-family: "italianno";
+        src: url(/Police/Italianno-Regular.ttf);
+    }
  
     body{
         padding-left: 32px;
@@ -12,42 +17,41 @@
     .Header
     {
         display: flex;
+        position: relative;
         flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
-     
-    
+       align-items: flex-start;
+       justify-content: space-between;
+  
     }
     .imgHeader
     {
        width: 5%;
        height: 5%;
-        
     }
     
         /* NavBar */
-    .navHeader{
-        display: flex;
-        align-items: center;
-        
-    }
+       
+    
     nav ul 
     {
         list-style-type: none;
         display: flex;
+        width: 100%;
         
     }
-        nav li 
-        {
-            margin-right: 1%;
-            width: auto;
-        }
+    nav li{
+       
+        margin-right: 15px;
+        
+    }
+      
     nav a
     {
         font-size: 1.3em;
         color: #181818;
         padding-bottom: 3px;
         text-decoration: none;
+ 
     }
     
         nav a:hover
@@ -65,6 +69,8 @@
         color: #3D86C9;
         margin-top: 2%;
         margin-bottom: 0%;
+        font-family: 'italianno';
+        font-size: 2.5rem;
     }
     
     .subtileSearch
@@ -192,9 +198,8 @@
             flex-direction: row;
             justify-content: center;
             display: grid;
-            column-gap: 2rem;
-            row-gap: 2rem;
             width: auto;
+            grid-template-columns: 25%, 25%, 25%;
             
              
                 
@@ -202,10 +207,10 @@
             .mainhostingBlock
             {
                 background-color: white;
-                border-radius: 1rem;
                 grid-row-start: 2;
                 margin: 1rem;
                 width: 85%;
+                border-radius: 10% 10% 0% 0%;
                 
                 
                 
