--- a/style.css
+++ b/style.css
@@ -1,12 +1,32 @@
- *{
-    height: auto;
-    width: 100%;
- }
+
+
+ /*    Police     */
     @font-face {
         font-family: "italianno";
         src: url(/Police/Italianno-Regular.ttf);
     }
- 
+
+    @font-face {
+        font-family: "caviar";
+        src: url(/Police/CaviarDreams.ttf);
+    }
+
+    @font-face {
+        font-family: "caviar-b";
+        src: url(/Police/Caviar_Dreams_Bold.ttf);
+    }
+
+    @font-face {
+        font-family: "caviar-i";
+        src: url(/Police/CaviarDreams_Italic.ttf);
+    }
+
+ /*--------------------*/
+
+ *{
+    height: auto;
+    width: 100%;
+ }
     body{
         padding-left: 32px;
         padding-right: 32px;
@@ -43,6 +63,7 @@
        
         margin-right: 15px;
         width: auto;
+        font-family: "caviar-i";
         
     }
       
@@ -77,7 +98,8 @@
     .subtileSearch
     {
     margin-top: 0%;
-    font-size: 1.2em;
+    font-size: 1em;
+    font-family:"caviar-i";
     }
     
     /*Searchbar */
