--- a/style.css
+++ b/style.css
@@ -135,6 +135,7 @@
             margin: 2%;
             display: flex;
             justify-content: space-between;
+            font-family:"caviar-i";
             
             
             
@@ -145,11 +146,13 @@
                 text-align: center;
                 padding: 2% 5% 2%;
                 width: auto;
+                font-family:"caviar";
             }
                 .hostingSubtile
                 {
                     color: #3D86C9;
                     text-align: center;
+                    font-family:"caviar";
                 }
             .hostingImg
             {
@@ -193,6 +196,7 @@
             color: #faf7f7;
             padding-top: 1%;
             padding-bottom: 1%;
+            font-family:"caviar-i";
             
             
         }
@@ -200,11 +204,13 @@
             {
                 margin: 0%;
                 text-align: center;
+                font-family:"caviar";
             }
                 .mainhostingSubtile
                 {
                     color: #3D86C9;
                     text-align: center;
+                    font-family:"caviar";
                 }
             .mainhostingImg
             {
