--- a/style.css
+++ b/style.css
@@ -187,10 +187,9 @@
             .hostingBlock
             {
                 background-color: white;
-                justify-content: space-around;
+                margin: 4%;
                 border-radius: 10% 10% 0% 0%;
                 flex-basis: 20%;
-                justify-content: space-evenly;
                row-gap: 2rem;
                 
                 
