--- a/style.css
+++ b/style.css
@@ -175,10 +175,8 @@
             background : #2879c586;
             margin: 4% 10% 2%;
             padding: 2rem;
-            justify-content: center;
-            display: grid;
-            column-gap: 2rem;
-            row-gap: 2rem;
+            flex-wrap: wrap;
+            display: flex;
 
             
             
