--- a/style.css
+++ b/style.css
@@ -102,8 +102,7 @@
     .searchSubmitinput
     {
         background-color: #3D86C9;
-        width: 5%;
-        height: 10%;
+        width: 10%;
         border-radius:30px;
         border: none;
         color: white;
@@ -111,9 +110,7 @@
     .searchFormSearchinput
     {
     
-        width: 7%;
-        height: 10%;
-        
+        width: 17%;
         border: none;
         color: black;
         border: 1px gray solid;
@@ -177,7 +174,7 @@
             padding: 2rem;
             flex-wrap: wrap;
             display: flex;
-
+            box-shadow: 0 0 20px #13589986;
             
             
             
@@ -185,7 +182,7 @@
             .hostingBlock
             {
                 background-color: white;
-                margin: 4%;
+                margin: 3%;
                 border-radius: 10% 10% 0% 0%;
                 flex-basis: 20%;
                row-gap: 2rem;
@@ -201,7 +198,106 @@
             padding: 2rem;
             flex-wrap: wrap;
             display: flex;
+            box-shadow: 0 0 20px #13589986;
            
             
     }
-    
+
+    /*  Activity    */
+    .activityTitle
+    {
+        display: flex;
+        justify-content: space-between;
+        font-family:"caviar-b";
+        width: 100%;
+        margin:4% 10% 2%;
+    }
+
+    .activitySubtile
+    {
+        font-family:"caviar-b";
+        width: 100%;
+        margin:4% 10% 2%;
+        color: #2879c5;
+    }
+
+    .activity
+    {
+        
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: auto 14rem 2rem 2rem 2rem 14rem;
+    }
+
+        .blockActivity
+        {
+            box-shadow: 0 0 20px #0000002e;
+            border-radius: 1rem;
+            overflow: hidden;
+            display: flex;
+            flex-direction: column;
+            width: 30%;
+        }
+            .swimming
+            {
+                
+                width: 100%;
+            }
+
+        .blockActivity2
+        {
+            box-shadow: 0 0 20px #0000002e;
+            border-radius: 1rem;
+            overflow: hidden;
+            display: flex;
+            flex-direction: column;
+            width: 30%
+            
+        }
+            .randonnee
+            {
+
+            }
+    /*footer*/
+    .footer
+    {
+        background-color: #2879c586;
+        width: 100%;
+        
+    }
+        .footerColumnwrapper
+        {
+            display: flex;
+            max-width: 100%;
+            width: 100%;
+            margin: auto;
+            padding: 0 2rem;
+            box-sizing: border-box;
+        }
+            .columnLeft
+            {
+                width: 30%;
+                padding: 2rem 2rem;
+            }
+            .columnCenter
+            {
+                width: 30%;
+                padding: 2rem 2rem;
+            }
+            .columnRight
+            {
+                width: 30%;
+                padding: 2rem 2rem;
+            }
+                h4 
+                {
+                    font-family:"caviar-i";
+                    width: 100%;
+                    color: white;
+                }
+
+                h3
+                {
+                    font-family:"caviar-b";
+                    width: 100%;
+                    color: white;
+                }
