--- a/style.css
+++ b/style.css
@@ -170,12 +170,13 @@
             }    
         .hostingPrefer
         {
-            background : #2879c586;
-            margin: 4% 10% 2%;
+            background: #2879c586;
+            margin: 4% 1% 2%;
             padding: 2rem;
             flex-wrap: wrap;
             display: flex;
             box-shadow: 0 0 20px #13589986;
+            width: 93%;
             
             
             
@@ -195,7 +196,7 @@
     
     .mainHosting {
         background : #2879c586;
-            margin: 4% 10% 2%;
+            margin: 4% 1% 2%;
             padding: 2rem;
             flex-wrap: wrap;
             display: flex;
