--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 /* Body */
 
 body
@@ -41,6 +42,11 @@ nav a
         border-top: 3px solid #0065FC;
     }
 
+    a
+    {
+        text-decoration: none;
+        color: black;
+    }
 /*--------*/
 
 
@@ -63,41 +69,67 @@ nav a
            
         }
 
-        h1
-        {
-            
-            font-size: 22px;
-        }
-      
+            h1
+            {
+                
+                font-size: 22px;
+            }
+        
 
-        .text-header
-        {
-            font-family: 'Raleway', sans-serif;
-            padding-left: 55px;
-            padding-bottom: 20px;
-        }
-
+                .text-header
+                {
+                    font-family: 'Raleway', sans-serif;
+                    padding-left: 55px;
+                    padding-bottom: 20px;
+                }
+                    .paragraph
+                    {
+                        display: flex;
+                        flex-direction: row;
+                    
+                    }
 
 
      /*_____Searchbar_____ */
     .searchSubmitinput
     {
-        background-color: #3D86C9;
+        background-color: #0065FC;
         width: 132px;
         height: 49px;
         border-radius: 0px 15px 15px 0px;
         border: none;
         color: white;
+        margin-left: -52px;
     }
     .searchFormSearchinput
     {
     
         width: 332px;
         height: 49px;
-        border-radius: 15px;
-        border: 1px gray solid;
-        margin-left: 55px;
+        border: 1px #d9D9D9 solid;
+        
     }
+        input::placeholder {
+            color: black;
+            font-size: 18px;
+            padding-left: 15px;
+        }
+
+        .searchFormIcon
+        {
+            background-color: #d9D9D9;
+            height: 49px;
+            width: 50px;
+            margin-left: 55px;
+            border-radius: 15px 0px 0px 15px;
+            
+        
+        }
+            .searchForm
+            {
+                display: flex;
+                flex-direction: row;
+            }
     /*__________________________*/
 
 
@@ -107,16 +139,19 @@ nav a
          {
             display: flex;
             flex-direction: row;
-            width: 25%;
+            width: 30%;
             padding-left: 62px;
+            
         
             
          }
             .button-filter
             {
-                border-style: solid grey 2px;
+                border: solid #d9D9D9 2px;
+                border-radius: 15px 15px 15px 15px;
                 display: flex;
                 justify-content: space-around;
+                
                
             }
 
@@ -125,11 +160,28 @@ nav a
      i
      {
          color: #0065FC;
+         
+
      }
-     .fa-duotone fa-star
+     
+    .fa-info:before
+    {
+        padding-left: 6px;
+    }
+        .logo-i
+        {
+            border: solid 2px grey;
+            border-radius: 50%;
+            width: 18px;
+            justify-content: center;
+        }
+
+     .fa-location-dot:before,.fa-map-marker-alt:before
      {
-        color: #F2F2F2;
+        padding-left: 20px;
+        color: black;
      }
+     
     /*---------------*/  
 
     /* Hosting */
@@ -139,42 +191,161 @@ nav a
         display: flex;
         flex-direction: row;
     }
-    .hostingmain
-    {
-        background-color: #F2F2F2;
-        width: 65%;
-        border-radius: 8% 8% 8% 8%;
-        height: 626px;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
-        
-       
-
-    }
-        h2
+        .hostingmain
         {
-            padding-left: 42px;
-            width: 100%;
-        }
-
-        .card {
-            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-            transition: 0.3s;
+            background-color: #F2F2F2;
+            width: 65%;
             border-radius: 20px;
-            background-color: white;
-            width: 246px;
-            height: 199px;
-          }
-          
-          /* Add rounded corners to the top left and the top right corner of the image */
-          .img-card {
-            border-radius: 20px 20px 0px 0px;
-            width: 246px;
-            height: 124px;
-          }
+            height: 626px;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            margin-left: 50px;
 
-    /*---------------*/ 
+        }
+            h2
+            {
+                padding-left: 42px;
+                width: 100%;
+                font-family: 'Raleway', sans-serif;
+                font-size: 22px;
+            }
+
+                .card {
+                    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+                    transition: 0.3s;
+                    border-radius: 20px;
+                    background-color: white;
+                    width: 246px;
+                    height: 199px;
+                }
+          
+
+                    .img-card {
+                        border-radius: 20px 20px 0px 0px;
+                        width: 246px;
+                        height: 124px;
+                    }
+
+                        .paragraphEnd
+                        {
+                            width: 100%;
+                            font-family: 'Raleway', sans-serif;
+                            padding-left: 44px;
+                            font-weight: bold;
+                        }
+                            .hostingSubtile
+                            {
+                                font-weight: bold;
+                                padding-left: 16px;
+                            }
+                                .hostingSubtile , .hostingParagraph
+                                {
+                                    margin: 0%;
+                                    padding-left: 16px;
+                                    width: auto;
+                                }
+                                .rating
+                                {
+                                    padding-left: 16px;
+                                    padding-top: 9px;
+                                }
+
+    /*_________________________________*/ 
+
+
+
+     /*___________Popular hosting*____________*/     
+
+      .popularHosting
+      {
+        background-color: #F2F2F2;
+        width: 420px;
+        height: 625px;
+        margin-left: 40px;
+        border-radius: 20px;
+      }
+        .titlePopular
+        {
+            font-family: 'Raleway', sans-serif;
+           
+        }
+            .cardPopular {
+                box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+                justify-content: space-around;
+                border-radius: 20px;
+                background-color: white;
+                width: 343px;
+                height: 144px;
+                padding-left: 37px;
+                
+            }
+    
+
+                .img-cardPopular {
+                    border-radius: 20px 0px 0px 20px;
+                        height: 137px;
+                        
+                    }
+                
+                   
+    /*_________________________________*/ 
+
+          /*  Activity    */
+    .activityTitle
+    {
+        display: flex;
+        justify-content: space-between;
+        font-family:'Raleway', sans-serif;;
+        width: 100%;
+        font-size: 22px;
+        font-weight: bold;
+        
+    }
+
+    .activitySubtile
+    {
+        font-family:'Raleway', sans-serif;;
+        width: 100%;
+        margin:2% 2% 2%;
+        text-align: center;
+        font-size: 16px;
+        font-weight: bold;
+        
+    }
+
+    .activity
+    {
+       display: grid;
+        
+    }
+        .activity-groups
+        {
+            display: grid;
+            column-gap: 2rem;
+            row-gap: 3rem;
+            grid-template-columns: repeat(2, 4fr);
+            justify-content: center;
+        }
+            .blockActivity
+            {
+                box-shadow: 0 0 20px #0000002e;
+                border-radius: 1rem;
+                width: 100%;
+            }
+                .imgActivity
+                {
+                    
+                    width: 302px;
+                    height: 444.51px;
+                }
+                     
+
+
+
+
+
+
 
      /*_____Footer___*/
      footer
@@ -182,6 +353,7 @@ nav a
         background-color: #F2F2F2;
         width: 1339px;
         height: 225px;
+        margin-left: 48px;
      }
      .footerColumnwrapper
         {
