--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,12 @@
     margin:auto;
 }
 
+
+
 /*____________ Navbar________*/
+
+
+    
 
 
 nav ul 
@@ -41,7 +46,7 @@ nav a:hover
 {
 color: #0065FC;
 border-top: 3px solid #0065FC;
-padding-top: 17px;
+padding-top: 15px;
 }
 
 a
@@ -330,7 +335,7 @@ flex-direction: column;
 justify-content: space-around;
 background-color: #F2F2F2;
 width: auto;
-height: 625px;
+
 border-radius: 20px;
 padding-left: 30px;
 padding-right: 30px;
@@ -504,9 +509,9 @@ h3
     font-weight: normal;
 }
 
-
+/* créer deux classe pour les filtres voir 3 un pour le titre un pour les deux premier boutons et un pour les deux derniers*/
+ /* For mobile phones: */
 @media only screen and (max-width: 768px) {
-    /* For mobile phones: */
 
 nav a:hover
 {
@@ -515,5 +520,88 @@ nav a:hover
     border-top: none;
 }
 
+.container 
+{
+    max-width: 768px;
+        margin: 2%;
+}
+.filter
+{
+    flex-wrap: wrap;
+}
+
+
+/* hostin */
+
+.hostingmain
+{
+    width: 100%;
+    background-color: white;
+}
+.card
+{
+    width: 100%;
+}
+/* Popular*/
+
 
 }
+
+/* For tablette */
+@media only screen and (max-width: 992px)  {
+
+    /* hosting popular */
+
+    .titlePopular 
+    {
+       width: 100%;
+       
+    }
+ .rating-popular, .rating-popular-2
+ {
+    padding-top: 23PX;
+ }
+ .cardPopular
+ {
+    width: 30%;
+    height: 146px;
+ }
+
+ .popularHosting
+{
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+}
+
+/* hosting */
+
+.hostingmain
+{
+    width: 100%;
+    height: 30%;
+    margin-bottom: 3%;
+} 
+
+.hosting
+{
+    display: initial;
+
+}
+
+.container
+{
+        max-width: 992px;
+        margin: 2%;
+}
+
+.card
+ {
+    margin-bottom: 3%;
+    justify-content: space-around;
+    flex-wrap: wrap;
+ }   
+
+
+    }
+    
