--- a/css/style.css
+++ b/css/style.css
@@ -367,12 +367,13 @@ font-family: 'Raleway', sans-serif;
 box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 border-radius: 20px;
 background-color: white;
-width: 97%;
+width: 97%; 
 height: 144px;
 flex-direction: row;
 display: flex;
 justify-content: space-between ;
 padding:5px;
+margin-bottom: 10%;
 
 }
 .rating-popular
