--- a/css/style.css
+++ b/css/style.css
@@ -239,17 +239,11 @@ color: black;
         padding-right: 10px;   
 
     }
-
-    .fa-chart-line:before, .fa-line-chart:before  
-    {
-        padding-left: 196px;
-    }
-
     .gris-stars
     {
         color: #d9D9D9;
         
-            }
+     }
 
     .fa-magnifying-glass
     {
@@ -309,23 +303,23 @@ font-size: 22px;
             padding-left: 44px;
             font-weight: bold;
         }
-            .hostingSubtile
-            {
-                font-weight: bold;
-                padding-left: 16px;
-            }
-                .hostingSubtile , .hostingParagraph
-                {
-                    margin: 0%;
-                    padding-left: 16px;
-                    width: auto;
-                    font-family: 'Raleway', sans-serif;
-                }
-                .rating
-                {
-                    padding-left: 16px;
-                    padding-top: 9px;
-                }
+.hostingSubtile
+{
+    font-weight: bold;
+    padding-left: 16px;
+}
+.hostingSubtile , .hostingParagraph
+{
+    margin: 0%;
+    padding-left: 16px;
+    width: auto;
+    font-family: 'Raleway', sans-serif;
+}
+.rating
+{
+    padding-left: 16px;
+    padding-top: 9px;
+}
 
 /*_________________________________*/ 
 
@@ -349,6 +343,9 @@ padding-right: 30px;
 {
 font-family: 'Raleway', sans-serif;
 padding-left: 0%;
+display: flex;
+    flex-direction: row;
+    gap: 48%;
 
 }
 
@@ -514,7 +511,84 @@ h3
     font-size: 16px;
     font-weight: normal;
 }
+/* For tablette */
+@media only screen and (max-width: 992px)  {
 
+    /* hosting popular */
+
+    .titlePopular 
+    {
+       width: 100%;
+       padding-left: 1%;
+       padding-bottom: 3%;
+       
+    }
+
+ .rating-popular
+ {
+    padding-top: 23PX;
+ }
+ .rating-popular-2
+ {
+    padding-top: 3PX;
+ }
+
+ .popular 
+ {
+    display: flex;
+    flex-direction: ROW;
+    gap: 3%;
+ }
+ .cardPopular
+ {
+    width: 100%;
+   
+    margin-bottom: 5%;
+ }
+
+ .popularHosting
+{
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+}
+
+/* hosting */
+
+.hostingmain
+{
+    width: 100%;
+    height: 30%;
+    margin-bottom: 3%;
+} 
+
+.hosting
+{
+    display: initial;
+
+}
+
+.container
+{
+        max-width: 992px;
+        margin: 2%;
+}
+
+.card
+ {
+    margin-bottom: 3%;
+    justify-content: space-around;
+    flex-wrap: wrap;
+ }   
+
+ /* Activity */
+
+ .imgActivity{
+    height: 187.51px;
+ }
+
+
+    }
 
  /* For mobile phones: */
 @media only screen and (max-width: 768px) {
@@ -548,7 +622,7 @@ nav a {
 .container 
 {
     max-width: 768px;
-        margin: 3%;
+        margin: 1%;
 }
 .filter
 {
@@ -597,6 +671,12 @@ a
     display: initial;
     color: white;
 }
+
+.logo-i
+{
+    width: 10%;
+    padding-top :2%;
+}
 /* hosting */
 .hosting
 {
@@ -619,28 +699,31 @@ a
 {
     width: 100%; 
     order: -2;
-    
+    flex-direction: column;
     padding: 0%;
   
 }
+.popular 
+{
+   display: flex;
+   flex-direction: column;
+   gap: 3%;
+}
+
 .cardPopular
 {
-width: 80%;
+width: 96%;
 display: flex;
 justify-content:center;
-margin-left: 10%;
-margin-right: 10%;
+
 }
 .titlePopular
 {
-    flex-direction: column;
-    margin-left: 10%;
-    width: 50%;
+    
+    margin-left: 5%;
+    width: 60%;
 }
-.fa-chart-line:before, .fa-line-chart:before
-{
-    padding-left: 619%;
-}
+
 /*  Activity */
 .activity-groups{
     flex-direction: column;
@@ -678,80 +761,4 @@ margin-right: 10%;
     padding-left: 10%;
   
 }
-}
-
-/* For tablette */
-@media only screen and (min-width: 769px) and (max-width: 992px)  {
-
-    /* hosting popular */
-
-    .titlePopular 
-    {
-       width: 100%;
-       padding-left: 1%;
-       padding-bottom: 3%;
-       
-    }
-    .fa-chart-line:before, .fa-line-chart:before 
-    {
-        padding-left: 525px;
-    }
- .rating-popular
- {
-    padding-top: 23PX;
- }
- .rating-popular-2
- {
-    padding-top: 3PX;
- }
- .cardPopular
- {
-    width: 30%;
-   
-    margin-bottom: 5%;
- }
-
- .popularHosting
-{
-display: flex;
-flex-direction: row;
-flex-wrap: wrap;
-}
-
-/* hosting */
-
-.hostingmain
-{
-    width: 100%;
-    height: 30%;
-    margin-bottom: 3%;
 } 
-
-.hosting
-{
-    display: initial;
-
-}
-
-.container
-{
-        max-width: 992px;
-        margin: 2%;
-}
-
-.card
- {
-    margin-bottom: 3%;
-    justify-content: space-around;
-    flex-wrap: wrap;
- }   
-
- /* Activity */
-
- .imgActivity{
-    height: 187.51px;
- }
-
-
-    }
-    
