--- a/css/style.css
+++ b/css/style.css
@@ -181,8 +181,27 @@ padding-right: 10px;
 vertical-align: middle;
 margin-top: 36px;
 margin-right: 20px;
+}
+
+.button-filter2
+{
+border: solid #d9D9D9 2px;
+border-radius: 25PX;
+display: flex;
+height: 26px;
+font-family: "raleway";
+padding-top: 10px;
+padding-right: 10px;
+vertical-align: middle;
+margin-top: 37px;
+margin-right: 20px;
 
 
+}
+
+
+.filtreAnimaux{
+   margin : 0%;
 }
 .button-filter:hover 
 {
@@ -531,7 +550,8 @@ h3
  }
  .rating-popular-2
  {
-    padding-top: 3PX;
+    padding-top: 37PX;
+    
  }
 
  .popular 
@@ -546,6 +566,16 @@ h3
    
     margin-bottom: 5%;
  }
+
+ .button-filter2{
+    justify-content: CENTER;
+    margin-top: 17px;
+ }
+ .logo-i
+{
+    width: 3%;
+    padding-top :2%;
+}
 
  .popularHosting
 {
@@ -636,9 +666,20 @@ a
 }
 .button-filter
 {
-    justify-content: CENTER;
+    margin: 4%;
+}
+.button-filter2
+{
+    margin-top: 7px;
+    width: 92%;
 }
 
+.filtreAnimaux{
+    font-size: 15px;
+    margin-top: -9px;
+    margin-left: 3px;
+   
+}
 .filterSubtile
 {
     width: 100%;
@@ -691,6 +732,48 @@ a
 {
     padding-left: 14px;
 }
+
+/*___Icônes____ */
+i
+{
+color: #0065FC;
+
+
+}
+
+.fa-info:before
+{
+padding-left: 1px;
+}
+.logo-i
+{
+border: solid 2px grey;
+border-radius: 50%;
+width: 47px;
+margin-right: 1px;
+}
+
+.fa-location-dot:before,.fa-map-marker-alt:before
+{
+padding-left: 20px;
+color: black;
+}
+
+.fa-money-bill-wave:before 
+{
+    padding-left: 5px;
+    padding-right: 5px;
+}
+    .fa-heart:before
+    {
+    padding-left: 5px;
+    padding-right: 5px; 
+    }
+    .fa-dog:before 
+    {
+        padding-left: 5px;
+        padding-right: 5px;   
+    }
 /* hosting */
 .hosting
 {
